--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
+  <link rel="icon" type="image/x-icon" href="_media/pic_web_logo_small.svg"/>
 </head>
 <body>
   <div id="app"></div>
@@ -18,6 +19,7 @@
       subMaxLevel: 3, // 生成目录的最大层级
       loadNavbar: true, // 加载导览航
       coverpage: true // 开启封面
+      
     }
   </script>
   <!-- Docsify v4 -->
